--- a/deeplink/index.html
+++ b/deeplink/index.html
@@ -10,24 +10,22 @@
 
 <body>
 	<ul>
-		<li> <a href="https://kyte.travel/hotels">Hotel Link</a></li>
-		<li><a href="https://kyte.app.link/flights">Flight Link</a></li>
-		<li><a href="https://kyte.app.link/?dlp=magazine">Magazine Link</a></li>
-		<li><a href="kyte://kakaolink/?dlp=magazine">Kyte kakao link</a></li>
-		<li><a href="kyte://kyte.app.link/?dlp=magazine">Kyte Link</a></li>
-		<li><a href="kyte://">Kyte Custom scheme empty</a></li>
-		<li><a href="https://kyte.onelink.me/rCn4/mqiprvs5">OneLink</a></li>
-		<li><a href="https://kyte.onelink.me/rCn4/c9xi4xk2">OneLink2</a></li>
-		<li><a href="https://dev.kyte.travel/flights">Dev Link</a></li>
+		<li> <a href="https://kyte.travel/hotels">[Hotel Link] https://kyte.travel/hotels</a></li>
+		<li><a href="https://kyte.app.link/flights">[Flight Link] https://kyte.app.link/flights</a></li>
+		<li><a href="https://kyte.app.link/?dlp=magazine">[Magazine Link] https://kyte.app.link/?dlp=magazine</a></li>
+		<li><a href="kyte://kakaolink/?dlp=magazine">[Kyte kakao link] kyte://kakaolink/?dlp=magazine</a></li>
+		<li><a href="kyte://kyte.app.link/?dlp=magazine">[Kyte Link] kyte://kyte.app.link/?dlp=magazine</a></li>
+		<li><a href="kyte://">[Kyte Custom scheme empty] kyte://</a></li>
+		<li><a href="https://kyte.onelink.me/rCn4/mqiprvs5">[OneLink] https://kyte.onelink.me/rCn4/mqiprvs5</a></li>
+		<li><a href="https://kyte.onelink.me/rCn4/c9xi4xk2">[OneLink2] https://kyte.onelink.me/rCn4/c9xi4xk2</a></li>
+		<li><a href="https://dev.kyte.travel/flights">[Dev Link] https://dev.kyte.travel/flights</a></li>
 		<li><a href="https://kyte.onelink.me/rCn4/c9xi4xk2">https://kyte.onelink.me/rCn4/c9xi4xk2</a>
 		<li><a href="https://kyte.onelink.me/rCn4/9w0xqaav">https://kyte.onelink.me/rCn4/9w0xqaav</a>
 		</li>
-		<li><a
-				href="https://docs.google.com/viewer?url=https://www.cdc.gov/quarantine/pdf/NCEZID_FRM_Pass_Attest_Eng-508.pdf?name=Jongwan&depart=341+30sdf"
-				target="_blank">PDF 링크</a>
-		<li><a
-				href="https://docs.google.com/viewer?url=https%3A%2F%2Fwww.cdc.gov%2Fquarantine%2Fpdf%2FNCEZID_FRM_Pass_Attest_Eng-508.pdf%3Fname%3DJongwan%26depart%3D341"
-				target="_blank">PDF 링크 Encoded</a>
+		<li><a href="https://docs.google.com/viewer?url=https://www.cdc.gov/quarantine/pdf/NCEZID_FRM_Pass_Attest_Eng-508.pdf?name=Jongwan&depart=341+30sdf"
+				target="_blank">PDF 링크 | https://docs.google.com/viewer?url=https://www.cdc.gov/quarantine/pdf/NCEZID_FRM_Pass_Attest_Eng-508.pdf?name=Jongwan&depart=341+30sdf</a>
+		<li><a href="https://docs.google.com/viewer?url=https%3A%2F%2Fwww.cdc.gov%2Fquarantine%2Fpdf%2FNCEZID_FRM_Pass_Attest_Eng-508.pdf%3Fname%3DJongwan%26depart%3D341"
+				target="_blank">PDF 링크 Encoded | https://docs.google.com/viewer?url=https%3A%2F%2Fwww.cdc.gov%2Fquarantine%2Fpdf%2FNCEZID_FRM_Pass_Attest_Eng-508.pdf%3Fname%3DJongwan%26depart%3D341</a>
 	</ul>
 </body>
 
